Closed Bug 795997 Opened 13 years ago Closed 13 years ago

Silence remaining[-Wunused-variable] / [-Wunused-private-field] warnings in mailnews/

Categories

(MailNews Core :: Backend, defect)

defect
Not set
trivial

Tracking

(Not tracked)

RESOLVED FIXED
Thunderbird 18.0

People

(Reporter: stefanh, Assigned: stefanh)

Details

Attachments

(1 file)

No description provided.
Attachment #666611 - Flags: review?(neil)
Comment on attachment 666611 [details] [diff] [review] Silence the last ones You should really get someone else to review the gloda changes.
Attachment #666611 - Flags: review?(neil) → review+
Comment on attachment 666611 [details] [diff] [review] Silence the last ones asuth, mind looking at the changes in nsGlodaRankerFunction.cpp?
Attachment #666611 - Flags: review?(bugmail)
Comment on attachment 666611 [details] [diff] [review] Silence the last ones Thanks for fixing the warnings!
Attachment #666611 - Flags: review?(bugmail) → review+
Status: ASSIGNED → RESOLVED
Closed: 13 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: