Bug 795997 - Silence remaining[-Wunused-variable] / [-Wunused-private-field] warnings in mailnews/. r=Neil+asuth.